@@ -160,6 +160,8 @@ Release date: TBA
 
 * Improve performance when inferring ``Call`` nodes, by utilizing caching.
 
+* Improve error message for invalid-metaclass when the node is an Instance.
+
 
 What's New in Pylint 2.9.6?
 ===========================
